panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__functions__inline__test_non_inline_declaration_provides_external_definition.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/f.c
    - panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/f.c"
   (function-definition inline stack-size=24
      (f~0 `fn() -> int` (static f))
      (compound-statement
         (return (42 `int` @0))))
   (provide-external-definition f))
(translation-unit "panko/tests/cases/execute/functions/inline/test_non_inline_declaration_provides_external_definition/main.c"
   (declaration external (f~0 `fn() -> int` (static f)) ∅)
   (function-definition external stack-size=24
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn() -> int>` @8
                  (f~0 `fn() -> int` (static f))))))))

----- stderr -----
